[package]
name = "sumhash"
version = "0.1.0"
edition = "2021"
description = "sumhash cryptographic function implementation"
authors = ["Ignacio Hagopian"]
license = "MIT"
readme = "README.md"

[lib]
bench = false

[dependencies]
rand = "0.8.5"
sha3 = "0.10.1"
digest = "0.10.3"
byteorder = "1.1.0"
anyhow = "1.0.59"

[dev-dependencies]
hex = "0.3.1"
criterion = "0.3"

[[bench]]
name = "compress_benchmark"
harness = false