[package]
name = "sumhash"
version = "0.1.1"
edition = "2021"
description = "sumhash cryptographic function implementation"
authors = ["Ignacio Hagopian"]
license = "MIT"
readme = "README.md"

[lib]
bench = false

[dependencies]
rand = "0.8.5"
sha3 = "0.10.1"
digest = "0.10.3"
byteorder = "1.1.0"
anyhow = "1.0.59"
once_cell = "1.13.0"

[dev-dependencies]
hex = "0.4.3"
criterion = "0.5"

[[bench]]
name = "sumhash512core_benchmark"
harness = false

[profile.bench]
debug = true